fix overflow

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,7 +6,6 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  overflow-x: hidden;
 }
 ::-webkit-scrollbar {
   width: 10px;
